--- a/number_guessing_game/style.css
+++ b/number_guessing_game/style.css
@@ -101,3 +101,11 @@ button:hover{
     font-size: 2rem;
     margin-bottom: 15px;
 }
+
+@media screen and (max-width:550px) {
+    .container{
+        margin: 20px;
+        width: 100%;
+    }
+
+}
