--- a/temperature_converter/style.css
+++ b/temperature_converter/style.css
@@ -107,3 +107,33 @@ html,body{
     border-radius: .5rem;
     font-weight: 700;
 }
+
+@media screen and (max-width:470px) {
+    .container{
+        margin: 20px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    form{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .block{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .form-group select{
+        width: 100%;
+    }
+
+    .button-group{
+        display: flex;
+        flex-direction: column;
+    }
+}
