--- a/file_upload/style.css
+++ b/file_upload/style.css
@@ -52,10 +52,29 @@ ul {
   width: 100%;
   font-weight: 500;
   background-color: #eff5ff;
-  color: #025bee;
   margin-bottom: 1em;
   padding: 1.1em 1em;
   border-radius: 0.3em;
   display: flex;
   justify-content: space-between;
+}
+
+.file-part{
+    display: flex;
+    flex-direction: column;
+     color: #025bee;
+     font-size: 1.3rem;
+}
+
+.container button{
+    background: transparent;
+    color: #E23D28;
+    margin-right: 10px;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+}
+
+.container button i{
+    font-size: 1.1rem;
 }
